objects/MindCrowd_Report__c.object
<CustomObject>
    <fields>
        <fullName>Already_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked if we are adding survey report api name</description>
        <label>Survey Report</label>
        <type>Checkbox</type>
    </fields>
    <label>MindCrowd Report</label>
    <nameField>
        <label>Report Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MindCrowd Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>